Some cleanup, but the plugin is still icky