@@ -1,11 +1,10 @@
 package net.nightwhistler.tddasm;
 
+import io.vavr.Tuple2;
 import net.nightwhistler.tddasm.annotation.CompileProgram;
-import net.nightwhistler.tddasm.mos65xx.Processor;
 import net.nightwhistler.tddasm.mos65xx.Program;
+import net.nightwhistler.tddasm.util.ProgramWriter;
 import org.apache.maven.plugin.AbstractMojo;
-import org.apache.maven.plugin.MojoExecutionException;
-import org.apache.maven.plugin.MojoFailureException;
 import org.apache.maven.plugins.annotations.LifecyclePhase;
 import org.apache.maven.plugins.annotations.Mojo;
 import org.apache.maven.plugins.annotations.Parameter;
@@ -13,8 +12,7 @@ import org.apache.maven.project.MavenProject;
 
 import java.io.File;
 import java.io.IOException;
-import java.io.PrintWriter;
-import java.lang.reflect.InvocationTargetException;
+import java.io.OutputStream;
 import java.lang.reflect.Method;
 import java.net.URL;
 import java.net.URLClassLoader;
@@ -22,7 +20,7 @@ import java.nio.file.FileSystems;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.Optional;
 import java.util.stream.Stream;
 
 @Mojo(name = "assembly-compile", defaultPhase = LifecyclePhase.COMPILE)
@@ -31,27 +29,30 @@ public class AssemblyCompilerMojo extends AbstractMojo {
     MavenProject project;
 
     @Override
-    public void execute() throws MojoExecutionException, MojoFailureException {
-        getLog().info("AssemblyCompilerMojo!!!!!!!!!!!");
+    public void execute() {
+        getLog().info("Scanning for methods annotated with @CompileProgram");
         String outputDir = project.getBuild().getOutputDirectory();
         Path javaOutputPath = Path.of(outputDir);
         Path mosPath = javaOutputPath.resolveSibling("mos62xx");
-//        Files.createDirectory(mosPath);
 
-        getLog().info("Got build dir: " + outputDir);
-
+        getLog().debug("Got build dir: " + outputDir);
         ClassLoader projectClassloader = getClassLoader(project);
 
         try (Stream<Path> stream = Files.walk(javaOutputPath)) {
-            for( Path classFile: stream.filter(Files::isRegularFile).collect(Collectors.toList())) {
-                getLog().info("Got file " + classFile.toAbsolutePath());
+            if (! Files.exists(mosPath)) {
+                Files.createDirectory(mosPath);
+            }
+
+            for( Path classFile: stream.filter(Files::isRegularFile).toList()) {
+                getLog().debug("Got file " + classFile.toAbsolutePath());
 
                 if (classFile.getFileName().toString().endsWith(".class")) {
                     String className = className(javaOutputPath.relativize(classFile));
                     Class<?> clz = projectClassloader.loadClass(className);
 
                     for (Method m: clz.getDeclaredMethods()) {
-                        checkMethod(m);
+                        Optional<Tuple2<String, Program>> maybeProgram = attemptCompile(m);
+                        maybeProgram.ifPresent(t -> writeProgram(mosPath, t._1, t._2));
                     }
                 }
             }
@@ -62,27 +63,32 @@ public class AssemblyCompilerMojo extends AbstractMojo {
         }
     }
 
-    private void checkMethod(Method method) {
+    private void writeProgram(Path toPath, String programName, Program program) {
+        Path filePath = toPath.resolve(programName);
+        try(OutputStream outputStream = Files.newOutputStream(filePath)) {
+            ProgramWriter.writeProgram(program, outputStream);
+            getLog().info("Successfully compiled " + programName);
+        } catch (IOException io) {
+            getLog().error("Could not write program to file " + filePath);
+        }
+    }
+
+    private Optional<Tuple2<String, Program>> attemptCompile(Method method) {
         CompileProgram compileProgram = method.getAnnotation(CompileProgram.class);
         if (compileProgram != null) {
             String name = compileProgram.value();
 
-//            if ( method.getReturnType() != Program.class ) {
-//                getLog().error("Cannot compile method " + method.getName() +
-//                        " class " + method.getDeclaringClass().getSimpleName()
-//                        + ". Should be a static method with return-type Program and no arguments."
-//                );
-//            }
-
             try {
                 Program program = (Program) method.invoke(null, new Object[0]);
-                program.printASM(new PrintWriter(System.out), true);
+                return Optional.of(new Tuple2<>(name, program));
             } catch (Exception i) {
-                getLog().error("Erorr compiling " + name, i);
+                getLog().error("Error compiling " + name, i);
             }
         } else {
-            getLog().info("Method " + method.getName() + " is not annotated. Skipping.");
+            getLog().debug("Method " + method.getName() + " is not annotated. Skipping.");
         }
+
+        return Optional.empty();
     }
 
     private String className(Path file) {
@@ -90,19 +96,19 @@ public class AssemblyCompilerMojo extends AbstractMojo {
                 .replaceAll(FileSystems.getDefault().getSeparator(), ".")
                 .replaceAll(".class", "");
 
-        getLog().info("Constructed classname " + asString);
+        getLog().debug("Constructed classname " + asString);
         return asString;
     }
 
     //https://stackoverflow.com/questions/49737706/access-project-classes-from-a-maven-plugin
     private ClassLoader getClassLoader(MavenProject project) {
         try {
-            List classpathElements = project.getCompileClasspathElements();
+            List<String> classpathElements = (List<String>) project.getCompileClasspathElements();
             classpathElements.add( project.getBuild().getOutputDirectory() );
 //            classpathElements.add( project.getBuild().getTestOutputDirectory() );
             URL urls[] = new URL[classpathElements.size()];
             for ( int i = 0; i < classpathElements.size(); ++i ) {
-                urls[i] = new File( (String) classpathElements.get( i ) ).toURL();
+                urls[i] = new File(classpathElements.get( i )).toURI().toURL();
             }
             return new URLClassLoader( urls, this.getClass().getClassLoader() );
         }
